# matplot2tikzfix

./: README.md  pyproject.toml
src/matplot2tikz/: __about__.py  __init__.py  _axes.py  _cleanfigure.py  _compare.py  _files.py  _image.py  _legend.py  _patch.py  _path.py  _save.py  _text.py
tests/: test_annotate_reference_output.tex  test_arrows_reference.tex  test_custom_legend_loc.py  test_custom_legend_loc_reference.tex  test_dual_axis_reference.tex  test_extra_parameters.py  test_extra_parameters_reference.tex  test_fancy_colorbar_reference.tex  test_fancybox_reference.tex  test_hatch_reference.tex  test_heat_reference.tex  test_image_plot_lower_reference.tex  test_image_plot_upper_reference.tex  test_legend_line_scatter_reference.tex  test_line_collection.py  test_marker_reference.tex  test_noise2_reference.tex  test_noise_reference.tex  test_patches_reference.tex  test_scatter_colormap_reference_output.tex  test_scatter_different_colors_reference.tex  test_scatter_different_sizes_reference.tex  test_scatter_reference.tex  test_secondary_legend_entries_reference.tex  test_subplot4x4_reference.tex  test_subplots_with_colorbars_reference.tex  test_tick_positions.py  test_tick_positions_reference.tex  test_ticklabel_format_plain.py  test_ticklabel_format_plain_reference.tex
