[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "matplot2tikz"
description = "Convert matplotlib figures into TikZ/PGFPlots"
readme = "README.md"
license = "MIT"
keywords = ["latex", "tikz", "matplotlib", "graphics"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "matplotlib >= 1.4.0",
  "numpy",
  "Pillow",
  "webcolors",
  "typing_extensions >= 4.5",
]
authors = [
    {name="Erwin de Gelder", email="erwindegelder@gmail.com"},
    {name="Nico Schlömer", email="nico.schloemer@gmail.com"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[project.optional-dependencies]
lint = [
    "mypy",
    "ruff",
]
test = [
    "pytest>=7.4.1",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.0.0",
    "typeguard>=4.4.0",
    "pandas",
    "astropy"
]
dev = [
    "tox",
    "tox-pyenv-redux",
    "mypy",
    "ruff",
    "pytest>=7.4.1",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.0.0",
    "typeguard>=4.4.0",
]

[tool.ruff]
line-length = 100
src = ["src"]
extend-exclude = [
    "conf.py",
    "src/matplot2tikz/_compare.py",
]
target-version = "py310"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",   # Conflicts with the formatter
    "ISC001",   # Conflicts with the formatter
    "PT001",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
]
"docs/**" = [
    "INP001",   # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = true # Functions need to be annotated
warn_unused_ignores = true
exclude = [
    "matplot2tikz-\\d+", # Ignore temporary folder created by setuptools when building an sdist
    "venv.*/",
    "build/",
    "dist/",
    "src/matplot2tikz/_compare.py",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplot2tikz._compare"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = """
    --import-mode=append
    --cov=matplot2tikz
    --cov-config=pyproject.toml
    --cov-report=
    """

[tool.coverage.paths]
# Maps coverage measured in site-packages to source files in src
source = ["src/", ".tox/*/lib/python*/site-packages/"]

[tool.coverage.run]
source = ["matplot2tikz"]

[tool.coverage.html]
directory = "reports/coverage_html"
